syntax = "proto3";

option csharp_namespace = "HessTrucks.Grpc";
import "google/protobuf/timestamp.proto";

package API;

service Trucks{
	rpc GetAllTrucks (GetAllTrucksRequest) returns (GetAllTrucksResponse){}
	rpc GetAllTrucksByCategoryId (GetAllTrucksByCategoryIdRequest) returns (GetAllTrucksResponse){}
	rpc GetTruckById (GetTruckRequest) returns (GetTruckByTruckIdResponse){}
}

message GetAllTrucksRequest{}

message GetAllTrucksResponse{
	repeated Truck Trucks = 1;
}

message GetAllTrucksByCategoryIdRequest{
	string CategoryId=1;
}

message GetTruckRequest{
	string TruckId=1;
}

message GetTruckByTruckIdResponse{
	Truck Truck = 1;
}

message Truck{
	string TruckId = 1;
	string Name = 2;
	int32 Year = 3;
	string Description = 4;
	double Price = 5;
	double PreviousPrice = 6;
	int32 Quantity = 7;
	bool Hidden = 8;
	bool Damaged = 9;
	string DefaultPhotoPath = 10;
}
